Overflow property fixed for mobile devices

--- a/public/main.css
+++ b/public/main.css
@@ -7,6 +7,7 @@ html, body {
     scrollbar-arrow-color: #000;
     scrollbar-shadow-color: #646464;
     scrollbar-dark-shadow-color: #646464;
+    overflow: auto !important;
 }
 
 ::-webkit-scrollbar { width: 8px; height: 3px;}
