--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,5 +1,9 @@
 @import "../../constants/palette";
 
+.About {
+  overflow-x: hidden;
+}
+
 .BorderBox {
   padding: 4em 3vmax 3vmax 3vmax;
   position: relative;
