--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,4 +1,5 @@
 .Footer {
+    overflow-x: hidden;
     padding-top: 10vh;
     .Content {
         min-height: 50vh;
